header section done

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tea House</title>
+    <link rel="shortcut icon" href="https://img.icons8.com/?size=100&id=1147&format=png&color=000000"
+        type="image/x-icon">
+
+
+    <!-- Google font  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <!-- Google font---Manrope -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,11 +33,48 @@
         }
     </script>
 
-    
+
 </head>
 
-<body>
+<body class="max-w-screen-xl mx-auto px-16 lg:px-28">
+    <!-- Header Section starts -->
+    <header class="md:flex pt-10 mb-20">
+        <!-- Text content -->
+        <div>
+            <h1 class="text-5xl md:text-7xl">It's good <br>
+                tea time at The <br> Tea House</h1>
+            <br>
+            <p class="text-[#777777] w-3/4">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste
+                Buds.</p>
+            <button class="bg-gradient-to-r from-orange-500 to-red-500 px-5 py-3 rounded-xl text-white my-3">Explore
+                More <i class="fa-solid fa-arrow-right -rotate-45 text-xl"></i></button>
+        </div>
+        <!-- Image container -->
+        <div class="relative">
+            <!-- Image -->
+            <div>
+                <img class="w-full" src="./images/banner.png" alt="">
+            </div>
+            <!-- Card -->
+            <div class="absolute flex items-center bg-white shadow-lg px-2 py-2 md:px-10 lg:py-4 rounded-lg top-28 md:top-80 md:left-32 lg:left-28">
+                <div><i class="fa-solid fa-star text-amber-500 text-2xl"></i></div>
+                <div class="ml-2">
+                    <h2 class="lg:text-2xl font-bold">5.00</h2>
+                    <p class="text-gray-500">Trust Pilot Ratings</p>
+                </div>
+            </div>
+        </div>
 
+
+
+    </header>
+    <!-- Header section ends -->
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 
 </html>
