--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <h1 class="text-5xl md:text-7xl">It's good <br>
                 tea time at The <br> Tea House</h1>
             <br>
-            <p class="text-[#777777] w-3/4">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste
+            <p class="text-gray-500 w-3/4">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste
                 Buds.</p>
             <button class="bg-gradient-to-r from-orange-500 to-red-500 px-5 py-3 rounded-xl text-white my-3">Explore
                 More <i class="fa-solid fa-arrow-right -rotate-45 text-xl"></i></button>
