--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             <br>
             <p class="text-gray-500 w-3/4">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste
                 Buds.</p>
+            <!-- Button -->
             <button class="bg-gradient-to-r from-orange-500 to-red-500 px-5 py-3 rounded-xl text-white my-3">Explore
                 More <i class="fa-solid fa-arrow-right -rotate-45 text-xl"></i></button>
         </div>
@@ -56,21 +57,70 @@
                 <img class="w-full" src="./images/banner.png" alt="">
             </div>
             <!-- Card -->
-            <div class="absolute flex items-center bg-white shadow-lg px-2 py-2 md:px-10 lg:py-4 rounded-lg top-28 md:top-80 md:left-32 lg:left-28">
+            <div
+                class="absolute flex items-center bg-white shadow-lg px-2 py-2 md:px-10 lg:py-4 rounded-lg top-28 md:top-80 md:left-32 lg:left-28">
+                <!-- icon -->
                 <div><i class="fa-solid fa-star text-amber-500 text-2xl"></i></div>
+                <!-- text -->
                 <div class="ml-2">
                     <h2 class="lg:text-2xl font-bold">5.00</h2>
                     <p class="text-gray-500">Trust Pilot Ratings</p>
                 </div>
             </div>
         </div>
-
-
-
     </header>
     <!-- Header section ends -->
     <main>
+        <!-- Featured product section -->
+        <section class="py-8 lg:py-20">
+            <!-- Title -->
+            <div class="text-center mb-8">
+                <h1 class="text-3xl md:text-5xl font-bold mb-5">Our Featured Products</h1>
+                <p class="max-w-xl mx-auto text-gray-500">There are many variations of passages of Lorem Ipsum
+                    available, but the majority have suffered alteration in some form, by injected humour, or randomised
+                    words which don't look even slightly believable. </p>
+            </div>
 
+            <!-- Grid cards container -->
+            <div class="md:grid grid-cols-4 gap-5 text-center">
+                <!-- Card one -->
+                <div class="mx-auto rounded-lg shadow-md bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] mb-5">
+                    <img class="pt-4 mx-auto" src="./images/tea-1.png" alt="">
+                    <div class="p-4">
+                        <h2 class="font-bold text-xl">Milk Tea</h2>
+                    <p class="text-sm text-gray-600">Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+                <!-- Card two -->
+                <div class="mx-auto rounded-lg shadow-md bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] mb-5">
+                    <img class="pt-4 mx-auto" src="./images/tea-2.png" alt="">
+                    <div class="p-4">
+                        <h2 class="font-bold text-xl">Black Tea</h2>
+                    <p class="text-sm text-gray-600">Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+                <!-- Card three -->
+                <div class="mx-auto rounded-lg shadow-md bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] mb-5">
+                    <img class="pt-4 mx-auto" src="./images/tea-3.png" alt="">
+                    <div class="p-4">
+                        <h2 class="font-bold text-xl">Lemon Tea</h2>
+                    <p class="text-sm text-gray-600">Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+                <!-- Card four -->
+                <div class="mx-auto rounded-lg shadow-md bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] mb-5">
+                    <img class="pt-4 mx-auto" src="./images/tea-4.png" alt="">
+                    <div class="p-4">
+                        <h2 class="font-bold text-xl">Green Tea</h2>
+                    <p class="text-sm text-gray-600">Creamer could be replaced by fresh milk</p>
+                    </div>
+                </div>
+                
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+        </section>
     </main>
     <footer>
 
