--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </header>
     <!-- Header section ends -->
     <main>
-        <!-- Featured product section -->
+        <!-- Featured product section ends -->
         <section class="py-8 lg:py-20">
             <!-- Title -->
             <div class="text-center mb-8">
@@ -82,13 +82,13 @@
             </div>
 
             <!-- Grid cards container -->
-            <div class="md:grid grid-cols-4 gap-5 text-center">
+            <div class="md:grid md:grid-cols-2 lg:grid-cols-4 gap-5 text-center">
                 <!-- Card one -->
                 <div class="mx-auto rounded-lg shadow-md bg-gradient-to-r from-[#F4F4F4] to-[#F4F4F4] mb-5">
                     <img class="pt-4 mx-auto" src="./images/tea-1.png" alt="">
                     <div class="p-4">
                         <h2 class="font-bold text-xl">Milk Tea</h2>
-                    <p class="text-sm text-gray-600">Creamer could be replaced by fresh milk</p>
+                        <p class="text-sm text-gray-600">Creamer could be replaced by fresh milk</p>
                     </div>
                 </div>
                 <!-- Card two -->
@@ -96,7 +96,7 @@
                     <img class="pt-4 mx-auto" src="./images/tea-2.png" alt="">
                     <div class="p-4">
                         <h2 class="font-bold text-xl">Black Tea</h2>
-                    <p class="text-sm text-gray-600">Creamer could be replaced by fresh milk</p>
+                        <p class="text-sm text-gray-600">Creamer could be replaced by fresh milk</p>
                     </div>
                 </div>
                 <!-- Card three -->
@@ -104,7 +104,7 @@
                     <img class="pt-4 mx-auto" src="./images/tea-3.png" alt="">
                     <div class="p-4">
                         <h2 class="font-bold text-xl">Lemon Tea</h2>
-                    <p class="text-sm text-gray-600">Creamer could be replaced by fresh milk</p>
+                        <p class="text-sm text-gray-600">Creamer could be replaced by fresh milk</p>
                     </div>
                 </div>
                 <!-- Card four -->
@@ -112,15 +112,43 @@
                     <img class="pt-4 mx-auto" src="./images/tea-4.png" alt="">
                     <div class="p-4">
                         <h2 class="font-bold text-xl">Green Tea</h2>
-                    <p class="text-sm text-gray-600">Creamer could be replaced by fresh milk</p>
+                        <p class="text-sm text-gray-600">Creamer could be replaced by fresh milk</p>
                     </div>
                 </div>
-                
+
                 <div></div>
                 <div></div>
                 <div></div>
             </div>
         </section>
+        <!-- Feature product section ends -->
+
+        <!-- Great tea section starts -->
+        <section>
+            <div class="grid grid-cols-1 lg:grid-cols-2 gap-10">
+                <!-- Image/card container -->
+                <div class="grid grid-cols-2 grid-rows-3 gap-3">
+                    <div class="bg-gradient-to-r from-red-100 to-red-50 rounded-xl"></div>
+                    <div class=" rounded-xl bg-orange-50 row-span-2">
+                        <img class="mx-auto my-5" src="./images/fresh-1.png" alt="">
+                    </div>
+                    <div class="rounded-xl bg-stone-100 row-span-2">
+                        <img class="mx-auto my-5" src="./images/fresh-2.png" alt="">
+                    </div>
+                    <div class="bg-gradient-to-r from-stone-200 to-stone-100 rounded-xl"></div>
+                </div>
+                <!-- Text container -->
+                <div class="mt-5 lg:mt-0">
+                    <h1 class="text-5xl font-bold mb-8">Great Tea, Freshly Presented</h1>
+                    <p class="text-gray-500 mb-7">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+                    <h3 class="text-xl font-bold mb-3">Unique Taste</h3>
+                    <p class="text-gray-500 mb-3">A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+                    <h3 class="text-xl font-bold mb-3">Premium Quality</h3>
+                    <p class="text-gray-500">Premium Quality that makes tea more elegant and more durable when you use it.</p>
+                </div>
+            </div>
+        </section>
+        <!-- Great tea section ends -->
     </main>
     <footer>
 
