--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <!-- Feature product section ends -->
 
         <!-- Great tea section starts -->
-        <section>
+        <section class="py-8 lg:pb-20">
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-10">
                 <!-- Image/card container -->
                 <div class="grid grid-cols-2 grid-rows-3 gap-3">
