--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <!-- Header section ends -->
     <main>
         <!-- Featured product section ends -->
-        <section class="py-8 lg:py-20">
+        <section class="mb-24">
             <!-- Title -->
             <div class="text-center mb-8">
                 <h1 class="text-3xl md:text-5xl font-bold mb-5">Our Featured Products</h1>
@@ -124,7 +124,7 @@
         <!-- Feature product section ends -->
 
         <!-- Great tea section starts -->
-        <section class="py-8 lg:pb-20">
+        <section class="mb-24">
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-10">
                 <!-- Image/card container -->
                 <div class="grid grid-cols-2 grid-rows-3 gap-3">
@@ -140,15 +140,85 @@
                 <!-- Text container -->
                 <div class="mt-5 lg:mt-0">
                     <h1 class="text-5xl font-bold mb-8">Great Tea, Freshly Presented</h1>
-                    <p class="text-gray-500 mb-7">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+                    <p class="text-gray-500 mb-7">The meaning of gong cha is chanese is to provide the best tea to
+                        emperor from all possessions . It represents the highest quality and self expectation.
+                        Establishing in 2006, Gong cha had been deeply appreciated by its custoers because of good words
+                        of mouth and unique customized service orginated from Taiwan.</p>
                     <h3 class="text-xl font-bold mb-3">Unique Taste</h3>
-                    <p class="text-gray-500 mb-3">A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+                    <p class="text-gray-500 mb-3">A Unique and different style from other teapots gives a luxurious and
+                        minimalist impression</p>
                     <h3 class="text-xl font-bold mb-3">Premium Quality</h3>
-                    <p class="text-gray-500">Premium Quality that makes tea more elegant and more durable when you use it.</p>
+                    <p class="text-gray-500">Premium Quality that makes tea more elegant and more durable when you use
+                        it.</p>
                 </div>
             </div>
         </section>
         <!-- Great tea section ends -->
+
+        <!-- Review section starts -->
+        <section class="mb-24">
+            <!-- container -->
+            <div class=" lg:flex gap-40 justify-between items-center bg-gradient-to-r from-orange-500 to-red-500 px-7 md:px-16 rounded-xl">
+                <!-- Text container -->
+                <div class="">
+                    <h1 class="text-5xl font-bold text-white mb-5 mt-10">Meet Our Super Clients</h1>
+                    <p class="text-white mb-8">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+                    <button class="font-bold bg-white text-orange-700 px-7 py-4 rounded-lg">Show All</button>
+                </div>
+                <!-- Card container -->
+                <div class="relative">
+                    <!-- first card -->
+                        <div class="md:w-[350px] bg-white rounded-xl relative top-32 md:left-10 md:mb-12 mb-10 opacity-40">
+                            <div class="absolute -top-10 -left-7">
+                                <img class=" bg-white p-1 rounded-full" src="./images/client.png" alt="">
+                            </div>
+                            <div class="p-8 space">
+                                <p class="text-gray-500 mb-3">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                                <h3 class="font-bold">Ilham Yuda</h3>
+                                <p class="text-gray-500">Businessman</p>
+                            </div>
+                            <div class="absolute left-72 bottom-4">
+                                <img src="./images/circles.png" alt="">
+                            </div>
+                        </div>
+
+                        <!-- middle card -->
+                        <div class="bg-white rounded-xl relative right-5 md:right-24 z-10">
+                            <div class="absolute -top-10 -left-7">
+                                <img class=" bg-white p-1 rounded-full" src="./images/client.png" alt="">
+                            </div>
+                            <div class="p-8 space">
+                                <p class="text-gray-500 mb-3">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                                <h3 class="font-bold">Ilham Yuda</h3>
+                                <p class="text-gray-500">Businessman</p>
+                            </div>
+                            <div class="absolute left-72 bottom-4">
+                                <img src="./images/circles.png" alt="">
+                            </div>
+                        </div>
+
+                        <!-- second card -->
+                        <div class="bg-white rounded-xl relative -top-20 left-6 md:-top-24 md:left-10 opacity-40">
+                            <div class="absolute -top-10 -left-7">
+                                <img class=" bg-white p-1 rounded-full" src="./images/client.png" alt="">
+                            </div>
+                            <div class="p-8 space">
+                                <p class="text-gray-500 mb-3">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                                <h3 class="font-bold">Ilham Yuda</h3>
+                                <p class="text-gray-500">Businessman</p>
+                            </div>
+                            <div class="absolute left-72 bottom-4">
+                                <img src="./images/circles.png" alt="">
+                            </div>
+                        </div>
+                        
+                        <div></div>
+                        <div></div>
+                </div>
+            </div>
+
+        </section>
+        <!-- Review section ends -->
     </main>
     <footer>
 
