--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             <!-- container -->
             <div class=" lg:flex gap-40 justify-between items-center bg-gradient-to-r from-orange-500 to-red-500 px-7 md:px-16 rounded-xl">
                 <!-- Text container -->
-                <div class="">
+                <div class="pt-5 md:pt-0">
                     <h1 class="text-5xl font-bold text-white mb-5 mt-10">Meet Our Super Clients</h1>
                     <p class="text-white mb-8">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
                     <button class="font-bold bg-white text-orange-700 px-7 py-4 rounded-lg">Show All</button>
@@ -168,7 +168,7 @@
                 <!-- Card container -->
                 <div class="relative">
                     <!-- first card -->
-                        <div class="md:w-[350px] bg-white rounded-xl relative top-32 md:left-10 md:mb-12 mb-10 opacity-40">
+                        <div class="md:w-[350px] bg-white rounded-xl relative top-36 md:top-32 left-6 md:left-10 md:mb-12 mb-10 opacity-40">
                             <div class="absolute -top-10 -left-7">
                                 <img class=" bg-white p-1 rounded-full" src="./images/client.png" alt="">
                             </div>
@@ -183,7 +183,7 @@
                         </div>
 
                         <!-- middle card -->
-                        <div class="bg-white rounded-xl relative right-5 md:right-24 z-10">
+                        <div class="bg-white rounded-xl relative right-1 md:right-24 z-10">
                             <div class="absolute -top-10 -left-7">
                                 <img class=" bg-white p-1 rounded-full" src="./images/client.png" alt="">
                             </div>
