--- a/index.html
+++ b/index.html
@@ -219,8 +219,41 @@
 
         </section>
         <!-- Review section ends -->
+
+        <!-- News and event section starts -->
+        <section class="mb-24">
+            <!-- title & description -->
+            <h1 class="font-bold text-3xl md:text-5xl text-center">News & Events</h1>
+            <p class="text-gray-500 text-center mt-5 mb-8 md:mb-12">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+                <!-- card container -->
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+                <!-- first card -->
+                <div class="border border-gray-300 rounded-lg p-4 space-y-3">
+                    <img src="./images/news-1.png" alt="">
+                    <p class="text-gray-500">Feb 05, 2027</p>
+                    <h4 class="font-bold text-xl md:text-2xl">Collecting 8 points for discount</h4>
+                    <p class="text-gray-500">There are many variations of passages of Lorem Ipsum available.</p>
+                    <button class="font-bold">Learn More</button>
+                </div>
+                <div class="border border-gray-300 rounded-lg p-4 space-y-3">
+                    <img src="./images/news-2.png" alt="">
+                    <p class="text-gray-500">Feb 05, 2027</p>
+                    <h4 class="font-bold text-xl md:text-2xl">Collecting 8 points for discount</h4>
+                    <p class="text-gray-500">There are many variations of passages of Lorem Ipsum available.</p>
+                    <button class="font-bold">Learn More</button>
+                </div>
+                <div class="border border-gray-300 rounded-lg p-4 space-y-3">
+                    <img src="./images/news-3.png" alt="">
+                    <p class="text-gray-500">Feb 05, 2027</p>
+                    <h4 class="font-bold text-xl md:text-2xl">Collecting 8 points for discount</h4>
+                    <p class="text-gray-500">There are many variations of passages of Lorem Ipsum available.</p>
+                    <button class="font-bold">Learn More</button>
+                </div>
+            </div>
+        </section>
+         <!-- News and event section ends -->
     </main>
-    <footer>
+    <footer class="mb-24">
 
     </footer>
 </body>
