--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
             <h1 class="font-bold text-3xl md:text-5xl text-center">News & Events</h1>
             <p class="text-gray-500 text-center mt-5 mb-8 md:mb-12">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
                 <!-- card container -->
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-3 md:gap-5 lg:grid-cols-3">
                 <!-- first card -->
                 <div class="border border-gray-300 rounded-lg p-4 space-y-3">
                     <img src="./images/news-1.png" alt="">
