footer section done

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 
 </head>
 
-<body class="max-w-screen-xl mx-auto px-16 lg:px-28">
+<body class="">
     <!-- Header Section starts -->
-    <header class="md:flex pt-10 mb-20">
+    <header class="max-w-screen-xl mx-auto px-16 lg:px-28 md:flex pt-10 mb-20">
         <!-- Text content -->
         <div>
             <h1 class="text-5xl md:text-7xl">It's good <br>
@@ -70,7 +70,7 @@
         </div>
     </header>
     <!-- Header section ends -->
-    <main>
+    <main class="max-w-screen-xl mx-auto px-16 lg:px-28">
         <!-- Featured product section ends -->
         <section class="mb-24">
             <!-- Title -->
@@ -158,62 +158,69 @@
         <!-- Review section starts -->
         <section class="mb-24">
             <!-- container -->
-            <div class=" lg:flex gap-40 justify-between items-center bg-gradient-to-r from-orange-500 to-red-500 px-7 md:px-16 rounded-xl">
+            <div
+                class=" lg:flex gap-40 justify-between items-center bg-gradient-to-r from-orange-500 to-red-500 px-7 md:px-16 rounded-xl">
                 <!-- Text container -->
                 <div class="pt-5 md:pt-0">
                     <h1 class="text-5xl font-bold text-white mb-5 mt-10">Meet Our Super Clients</h1>
-                    <p class="text-white mb-8">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+                    <p class="text-white mb-8">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised words which
+                        don't look even slightly believable. </p>
                     <button class="font-bold bg-white text-orange-700 px-7 py-4 rounded-lg">Show All</button>
                 </div>
                 <!-- Card container -->
                 <div class="relative">
                     <!-- first card -->
-                        <div class="md:w-[350px] bg-white rounded-xl relative top-36 md:top-32 left-6 md:left-10 md:mb-12 mb-10 opacity-40">
-                            <div class="absolute -top-10 -left-7">
-                                <img class=" bg-white p-1 rounded-full" src="./images/client.png" alt="">
-                            </div>
-                            <div class="p-8 space">
-                                <p class="text-gray-500 mb-3">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
-                                <h3 class="font-bold">Ilham Yuda</h3>
-                                <p class="text-gray-500">Businessman</p>
-                            </div>
-                            <div class="absolute left-72 bottom-4">
-                                <img src="./images/circles.png" alt="">
-                            </div>
+                    <div
+                        class="md:w-[350px] bg-white rounded-xl relative top-36 md:top-32 left-6 md:left-10 md:mb-12 mb-10 opacity-40">
+                        <div class="absolute -top-10 -left-7">
+                            <img class=" bg-white p-1 rounded-full" src="./images/client.png" alt="">
                         </div>
+                        <div class="p-8 space">
+                            <p class="text-gray-500 mb-3">We are providing the best and suitable home insurance services
+                                for the people who are interested to treatment</p>
+                            <h3 class="font-bold">Ilham Yuda</h3>
+                            <p class="text-gray-500">Businessman</p>
+                        </div>
+                        <div class="absolute left-72 bottom-4">
+                            <img src="./images/circles.png" alt="">
+                        </div>
+                    </div>
 
-                        <!-- middle card -->
-                        <div class="bg-white rounded-xl relative right-1 md:right-24 z-10">
-                            <div class="absolute -top-10 -left-7">
-                                <img class=" bg-white p-1 rounded-full" src="./images/client.png" alt="">
-                            </div>
-                            <div class="p-8 space">
-                                <p class="text-gray-500 mb-3">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
-                                <h3 class="font-bold">Ilham Yuda</h3>
-                                <p class="text-gray-500">Businessman</p>
-                            </div>
-                            <div class="absolute left-72 bottom-4">
-                                <img src="./images/circles.png" alt="">
-                            </div>
+                    <!-- middle card -->
+                    <div class="bg-white rounded-xl relative right-1 md:right-24 z-10">
+                        <div class="absolute -top-10 -left-7">
+                            <img class=" bg-white p-1 rounded-full" src="./images/client.png" alt="">
                         </div>
+                        <div class="p-8 space">
+                            <p class="text-gray-500 mb-3">We are providing the best and suitable home insurance services
+                                for the people who are interested to treatment</p>
+                            <h3 class="font-bold">Ilham Yuda</h3>
+                            <p class="text-gray-500">Businessman</p>
+                        </div>
+                        <div class="absolute left-72 bottom-4">
+                            <img src="./images/circles.png" alt="">
+                        </div>
+                    </div>
 
-                        <!-- second card -->
-                        <div class="bg-white rounded-xl relative -top-20 left-6 md:-top-24 md:left-10 opacity-40">
-                            <div class="absolute -top-10 -left-7">
-                                <img class=" bg-white p-1 rounded-full" src="./images/client.png" alt="">
-                            </div>
-                            <div class="p-8 space">
-                                <p class="text-gray-500 mb-3">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
-                                <h3 class="font-bold">Ilham Yuda</h3>
-                                <p class="text-gray-500">Businessman</p>
-                            </div>
-                            <div class="absolute left-72 bottom-4">
-                                <img src="./images/circles.png" alt="">
-                            </div>
+                    <!-- second card -->
+                    <div class="bg-white rounded-xl relative -top-20 left-6 md:-top-24 md:left-10 opacity-40">
+                        <div class="absolute -top-10 -left-7">
+                            <img class=" bg-white p-1 rounded-full" src="./images/client.png" alt="">
                         </div>
-                        
-                        <div></div>
-                        <div></div>
+                        <div class="p-8 space">
+                            <p class="text-gray-500 mb-3">We are providing the best and suitable home insurance services
+                                for the people who are interested to treatment</p>
+                            <h3 class="font-bold">Ilham Yuda</h3>
+                            <p class="text-gray-500">Businessman</p>
+                        </div>
+                        <div class="absolute left-72 bottom-4">
+                            <img src="./images/circles.png" alt="">
+                        </div>
+                    </div>
+
+                    <div></div>
+                    <div></div>
                 </div>
             </div>
 
@@ -224,8 +231,10 @@
         <section class="mb-24">
             <!-- title & description -->
             <h1 class="font-bold text-3xl md:text-5xl text-center">News & Events</h1>
-            <p class="text-gray-500 text-center mt-5 mb-8 md:mb-12">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
-                <!-- card container -->
+            <p class="text-gray-500 text-center mt-5 mb-8 md:mb-12">There are many variations of passages of Lorem Ipsum
+                available, but the majority have suffered alteration in some form, by injected humour, or randomised
+                words which don't look even slightly believable. </p>
+            <!-- card container -->
             <div class="grid grid-cols-1 md:grid-cols-2 gap-3 md:gap-5 lg:grid-cols-3">
                 <!-- first card -->
                 <div class="border border-gray-300 rounded-lg p-4 space-y-3">
@@ -251,11 +260,78 @@
                 </div>
             </div>
         </section>
-         <!-- News and event section ends -->
+        <!-- News and event section ends -->
     </main>
-    <footer class="mb-24">
+    <!-- Footer section starts -->
+    <footer class=" bg-gradient-to-r from-red-50 to-red-100 text-gray-700 py-10 px-4 md:px-16">
+        <!-- Container -->
+        <div class="mx-auto w-9/12">
 
+            <div class="mb-8 flex justify-between">
+                <!-- Icon -->
+                <div>
+                    <img src="./images/cup.png" alt="">
+                </div>
+                <!-- Text -->
+                <div class="md:flex md:items-center md:gap-6">
+                    <p>Ready to get started?</p>
+                    <button class="bg-gradient-to-r from-orange-500 to-red-500 px-5 py-3 rounded-xl text-white my-3">Get
+                        Started</button>
+                </div>
+
+            </div>
+            <!-- Links -->
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
+                <!-- Quick Links -->
+                <div>
+                    <h3 class="font-semibold text-lg mb-3">Quick Links</h3>
+                    <ul class="space-y-2">
+                        <li><a class="hover:text-orange-600" href="">Home</a></li>
+                        <li><a class="hover:text-orange-600" href="">About Us</a></li>
+                        <li><a class="hover:text-orange-600" href="">Insurance</a></li>
+                        <li><a class="hover:text-orange-600" href="">Privacy Policy</a></li>
+                    </ul>
+                </div>
+                <!-- Our service -->
+                <div>
+                    <h3 class="font-semibold text-lg mb-3">Our Service</h3>
+                    <ul class="space-y-2">
+                        <li><a class="hover:text-orange-600" href="">Life Insurance</a></li>
+                        <li><a class="hover:text-orange-600" href="">Car Insurance</a></li>
+                        <li><a class="hover:text-orange-600" href="">Health Insurance</a></li>
+                        <li><a class="hover:text-orange-600" href="">House Insurance</a></li>
+                    </ul>
+                </div>
+                <!-- Help -->
+                <div>
+                    <h3 class="font-semibold text-lg mb-3">Help</h3>
+                    <ul class="space-y-2">
+                        <li><a class="hover:text-orange-600" href="">FAQs</a></li>
+                        <li><a class="hover:text-orange-600" href="">Contact Us</a></li>
+                    </ul>
+                </div>
+                <!-- form -->
+                <div>
+                    <h2 class="font-semibold text-xl mb-8">Subscribe to our newsletter</h2>
+                    <input class="bg-transparent border-b-2 border-black w-4/6 md:w-5/6" type="email" name="" id=""
+                        placeholder="Email address">
+                    <i
+                        class="w-7 h-7 inline-flex text-white justify-center items-center bg-orange-500 rounded-full fa-solid fa-chevron-right"></i>
+                    <div class="flex gap-5 md:gap-10 mb-2 mt-8">
+                        <i class="fa-brands fa-facebook"></i>
+                        <i class="fa-brands fa-x-twitter"></i>
+                        <i class="fa-brands fa-instagram"></i>
+                    </div>
+                </div>
+
+
+            </div>
+        </div>
+        <div class="mx-auto text-center pt-4 mt-4">
+            <p class="text-sm">© 2027 UIDesign.to - All rights reserved.</p>
+        </div>
     </footer>
+    <!-- Footer section ends -->
 </body>
 
 </html>
